# amazon-bedrock-samples

./: README.md
bedrock_file_example/: .gitignore  README.md  prompt.txt  pyproject.toml  requirements.txt  setup.sh
bedrock_file_example/bedrock_file_example/: __init__.py  main.py
bedrock_file_example/docs/: template.docx  working_doc.docx
chat-completion-api/: bedrock_chat.py  pyproject.toml
litellm-cost-bedrock/: .env.example  README.md  config.yaml  pyproject.toml  test_nova.py
performance-comparison/: bedrock_tier_comparison.ipynb
