[project]
name = "bedrock_file_example"
version = "0.1.0"
description = "CLI tool to interact with Claude Opus 4.5 on Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.7",
]

[project.scripts]
bedrock-claude = "bedrock_file_example.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
